--- a/assign1_part3.ipynb
+++ b/assign1_part3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 464,
    "id": "27b04ed9",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'/Users/pantchanit/Documents/Pant_Stat_Asign1'"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 464,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 465,
    "id": "95e06f32",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 466,
    "id": "73046386",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "4         Andorra         Western Europe           0"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 466,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 467,
    "id": "ca9003d8",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 468,
    "id": "489dd575",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
        "[222 rows x 35 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 468,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 469,
    "id": "115701a2",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,7 @@
        "[217 rows x 5 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 469,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 470,
    "id": "049b0c85",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 470,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 471,
    "id": "46e8d551",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,7 @@
        "[217 rows x 5 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 471,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 472,
    "id": "926e0a61",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1087,7 @@
        "[217 rows x 5 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 472,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 473,
    "id": "7b3862af",
    "metadata": {},
    "outputs": [],
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 474,
    "id": "bd8ae5c2",
    "metadata": {},
    "outputs": [
@@ -1509,7 +1509,7 @@
        "[222 rows x 35 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 474,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 475,
    "id": "c2e3164f",
    "metadata": {},
    "outputs": [
@@ -1678,7 +1678,7 @@
        "[217 rows x 5 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 475,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 476,
    "id": "cc1f29cc",
    "metadata": {},
    "outputs": [
@@ -1700,7 +1700,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 476,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1721,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 477,
    "id": "921669da",
    "metadata": {},
    "outputs": [
@@ -1901,7 +1901,7 @@
        "[217 rows x 7 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 477,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 478,
    "id": "3f4b448b",
    "metadata": {},
    "outputs": [
@@ -2093,7 +2093,7 @@
        "[217 rows x 7 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 478,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 479,
    "id": "9c3019ff",
    "metadata": {},
    "outputs": [],
@@ -2115,7 +2115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 480,
    "id": "5fa90aac",
    "metadata": {},
    "outputs": [
@@ -2515,7 +2515,7 @@
        "[222 rows x 35 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 480,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2528,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 481,
    "id": "31930e6f",
    "metadata": {},
    "outputs": [
@@ -2684,7 +2684,7 @@
        "[217 rows x 5 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 481,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2696,7 +2696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 482,
    "id": "e2403e4b",
    "metadata": {},
    "outputs": [
@@ -2706,7 +2706,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 482,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2727,7 +2727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 483,
    "id": "18e894ac",
    "metadata": {},
    "outputs": [
@@ -2944,7 +2944,7 @@
        "[217 rows x 9 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 483,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2956,7 +2956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 484,
    "id": "dc187de3",
    "metadata": {},
    "outputs": [
@@ -3160,7 +3160,7 @@
        "[217 rows x 9 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 484,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3180,7 +3180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 485,
    "id": "0e07e75b",
    "metadata": {},
    "outputs": [],
@@ -3190,7 +3190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 486,
    "id": "e5229874",
    "metadata": {},
    "outputs": [
@@ -3590,7 +3590,7 @@
        "[222 rows x 35 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 486,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3603,7 +3603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 487,
    "id": "632aacfd",
    "metadata": {},
    "outputs": [
@@ -3759,7 +3759,7 @@
        "[217 rows x 5 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 487,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3772,7 +3772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 488,
    "id": "cede8e9a",
    "metadata": {},
    "outputs": [
@@ -3782,7 +3782,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 488,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3803,7 +3803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 489,
    "id": "9d4541ca",
    "metadata": {},
    "outputs": [
@@ -4044,7 +4044,7 @@
        "[217 rows x 11 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 489,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4056,7 +4056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 490,
    "id": "9d6d32bf",
    "metadata": {},
    "outputs": [
@@ -4297,7 +4297,7 @@
        "[217 rows x 11 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 490,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4309,7 +4309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 491,
    "id": "89f669e8",
    "metadata": {},
    "outputs": [],
@@ -4319,7 +4319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 492,
    "id": "5a2be50c",
    "metadata": {},
    "outputs": [
@@ -4719,7 +4719,7 @@
        "[222 rows x 35 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 492,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4732,7 +4732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 493,
    "id": "8a6a4de3",
    "metadata": {},
    "outputs": [
@@ -4888,7 +4888,7 @@
        "[217 rows x 5 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 493,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4901,7 +4901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 494,
    "id": "8c83c6da",
    "metadata": {},
    "outputs": [
@@ -4911,7 +4911,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 494,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4932,7 +4932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 495,
    "id": "e9f7188a",
    "metadata": {},
    "outputs": [
@@ -5197,7 +5197,7 @@
        "[217 rows x 13 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 495,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5209,7 +5209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 496,
    "id": "18b1daea",
    "metadata": {},
    "outputs": [
@@ -5487,7 +5487,7 @@
        "[217 rows x 13 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 496,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5499,7 +5499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 497,
    "id": "9bc18fbe",
    "metadata": {},
    "outputs": [],
@@ -5509,7 +5509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 498,
    "id": "88af43a7",
    "metadata": {},
    "outputs": [
@@ -5909,7 +5909,7 @@
        "[222 rows x 35 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 498,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5922,7 +5922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 499,
    "id": "634adb31",
    "metadata": {},
    "outputs": [
@@ -6078,7 +6078,7 @@
        "[217 rows x 5 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 499,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6090,7 +6090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 500,
    "id": "039fe52a",
    "metadata": {},
    "outputs": [
@@ -6100,7 +6100,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 500,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6121,7 +6121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 501,
    "id": "5605a206",
    "metadata": {},
    "outputs": [
@@ -6423,7 +6423,7 @@
        "[217 rows x 15 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 501,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6435,7 +6435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 502,
    "id": "93d540bb",
    "metadata": {},
    "outputs": [
@@ -6737,7 +6737,7 @@
        "[217 rows x 15 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 502,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6749,7 +6749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 503,
    "id": "2e260194",
    "metadata": {},
    "outputs": [
@@ -7051,7 +7051,7 @@
        "[64 rows x 15 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 503,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7063,7 +7063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 504,
    "id": "23d5be89",
    "metadata": {},
    "outputs": [
@@ -7365,7 +7365,7 @@
        "[64 rows x 15 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 504,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7378,17 +7378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 505,
    "id": "6a04493d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fd7b86becd0>"
+       "<seaborn.axisgrid.PairGrid at 0x7fd771d9eb50>"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 505,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7409,7 +7409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 506,
    "id": "dac00d62",
    "metadata": {},
    "outputs": [
@@ -7419,7 +7419,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 506,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7445,17 +7445,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 507,
    "id": "a14cb186",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fd7a0b856a0>"
+       "<seaborn.axisgrid.PairGrid at 0x7fd74e450e80>"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 507,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7476,7 +7476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 508,
    "id": "7ef72bb1",
    "metadata": {},
    "outputs": [
@@ -7491,7 +7491,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 508,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7502,17 +7502,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 509,
    "id": "07e7f5ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fd7a939bc40>"
+       "<seaborn.axisgrid.PairGrid at 0x7fd7587dea60>"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 509,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7534,17 +7534,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 510,
    "id": "31c7af09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fd7a0c3e7c0>"
+       "<seaborn.axisgrid.PairGrid at 0x7fd75b520f70>"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 510,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7566,17 +7566,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 511,
    "id": "9369b8ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fd78d684190>"
+       "<seaborn.axisgrid.PairGrid at 0x7fd75b6006d0>"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 511,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7598,17 +7598,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 512,
    "id": "eb971883",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fd790242af0>"
+       "<seaborn.axisgrid.PairGrid at 0x7fd75837baf0>"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 512,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7630,17 +7630,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 513,
    "id": "e84e499a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fd790178ac0>"
+       "<seaborn.axisgrid.PairGrid at 0x7fd75a392670>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 513,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7662,17 +7662,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 514,
    "id": "12718672",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fd790da3d60>"
+       "<seaborn.axisgrid.PairGrid at 0x7fd763e44a30>"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 514,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7694,13 +7694,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 516,
    "id": "3b3ad8bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "DataCorre6.to_csv('inftra_health_2004_2014.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ba685d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
